Add TEE app and edge Secretpad platform